# mosaik

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
actors/: README.md  justfile
actors/beacon/: Cargo.toml
actors/beacon/src/: main.rs
actors/builder/: Cargo.toml
actors/builder/src/: main.rs
actors/canon/: Cargo.toml
actors/canon/src/: main.rs  primitives.rs
actors/engine-api/: Cargo.toml
actors/engine-api/src/: cli.rs  main.rs  primitives.rs
actors/gc/: Cargo.toml
actors/gc/src/: main.rs
actors/ingress/: Cargo.toml
actors/ingress/src/: main.rs  rpc.rs
actors/model/: Cargo.toml
actors/model/src/: lib.rs
actors/pending/: Cargo.toml
actors/pending/src/: main.rs
actors/reputation/: Cargo.toml
actors/reputation/src/: main.rs
actors/rpc/: Cargo.toml
actors/rpc/src/: cli.rs  main.rs  rpc.rs  state.rs  store.rs  sync.rs
actors/scripts/: compile-devnet.sh  deploy-devnet.sh  devnet-config.sh  start-devnet.sh  stop-devnet.sh  watch-devnet.sh
actors/shared/: Cargo.toml
actors/shared/src/: cli.rs  lib.rs  model.rs
actors/sim/: Cargo.toml
actors/sim/src/: main.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/concepts/: architecture.md  identity.md  self-organization.md
book/src/getting-started/: installation.md  overview.md  quickstart.md
book/src/internals/: bonds.md  determinism.md  protocol.md  raft.md  state-sync.md
book/src/reference/: configuration.md  errors.md  metrics.md  primitives.md  testing.md
book/src/subsystems/: collections.md  discovery.md  groups.md  network.md  streams.md  tee.md
book/src/tutorials/: bootstrap.md  group-chat.md  orderbook.md  tdx-attestation.md
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md
docs/src/network/: control.md  interests.md  transport.md
docs/theme/: head.hbs
examples/: README.md  bootstrap.rs  group-chat.rs  rate-limiter.rs
examples/group-chat/: Cargo.toml
examples/group-chat/src/: main.rs
examples/orderbook/: Cargo.toml
examples/orderbook/src/: main.rs  matching.rs  types.rs
examples/tee-streams/: Cargo.toml
examples/tee-streams/src/: main.rs
examples/tee/tdx/: Cargo.toml  README.md  build.rs  build.sh
examples/tee/tdx/src/: main.rs
src/: actor.rs  channel.rs  error.rs  id.rs  lib.rs  local.rs  main.rs  network.rs  peer.rs  test_utils.rs  transaction.rs
src/bft/: consensus.rs  mod.rs
src/builtin/: memory.rs  mod.rs  noop.rs
src/cli/: args.rs  beacon.rs  bootstrap.rs  dht.rs  inspect.rs  mod.rs  tracing.rs
src/collections/: cell.rs  config.rs  depq.rs  error.rs  map.rs  mod.rs  once.rs  primitives.rs  register.rs  set.rs  vec.rs  when.rs
src/collections/sync/: inner.rs  mod.rs  protocol.rs  provider.rs  session.rs  snapshot.rs
src/datum/: acc.rs  mod.rs
src/discovery/: announce.rs  bootstrap.rs  catalog.rs  channel.rs  config.rs  dht.rs  entry.rs  error.rs  event.rs  message.rs  mod.rs  peer.rs  ping.rs  protocol.rs  rtt.rs  sync.rs  worker.rs
src/discovery/announce/: event.rs  mod.rs
src/discovery/sync/: mod.rs
src/discovery_old/: catalog.rs  message.rs  mod.rs  peer.rs
src/groups/: accept.rs  bond.rs  builder.rs  config.rs  consensus.rs  cursor.rs  def.rs  error.rs  group.rs  join.rs  key.rs  listen.rs  log.rs  member.rs  mod.rs  protocol.rs  storage.rs  when.rs  wire.rs
src/groups/bond/: error.rs  event.rs  handshake.rs  heartbeat.rs  mod.rs  protocol.rs  worker.rs
src/groups/consensus/: candidate.rs  follower.rs  leader.rs  mod.rs  protocol.rs  role.rs  shared.rs
src/groups/group/: bond.rs  builder.rs  conn.rs  mod.rs  state.rs  worker.rs
src/groups/log/: cursor.rs  driver.rs  mod.rs  rsm.rs  sm.rs  storage.rs
src/groups/machine/: mod.rs  noop.rs  sync.rs
src/groups/raft/: candidate.rs  catchup.rs  follower.rs  leader.rs  mod.rs  protocol.rs  role.rs  shared.rs
src/groups/replay/: mod.rs  provider.rs  session.rs
src/macros/: Cargo.toml
src/macros/src/: collection.rs  lib.rs  stream.rs
src/network/: builder.rs  config.rs  error.rs  link.rs  local.rs  mod.rs
src/primitives/: channel.rs  chex.rs  datum.rs  encoding.rs  fmt.rs  fut.rs  futures.rs  id.rs  iter.rs  mod.rs  queue.rs  ticket.rs
src/store/: config.rs  mod.rs  worker.rs
src/streams/: accept.rs  channel.rs  config.rs  consumer.rs  criteria.rs  datum.rs  error.rs  fanout.rs  link.rs  listen.rs  mod.rs  producer.rs  protocol.rs  status.rs
src/streams/consumer/: builder.rs  mod.rs  receiver.rs  status.rs  when.rs  worker.rs
src/streams/ext/: accum.rs  append.rs  consumer.rs  fold.rs  join.rs  keyed.rs  mod.rs  producer.rs  snapshot.rs
src/streams/producer/: builder.rs  error.rs  mod.rs  sender.rs  sink.rs  status.rs  when.rs  worker.rs
src/streams/status/: info.rs  mod.rs  when.rs
src/streams_old/: error.rs
src/streams_old/consumer/: error.rs
src/streams_old/ext/: accum.rs  keyed.rs  mod.rs  snapshot.rs
src/streams_old/producer/: sink.rs  status.rs
src/tee/: mod.rs  validator.rs
src/tee/tdx/: build.rs  local.rs  measure.rs  mod.rs  ticket.rs  validator.rs
src/test_utils/: mod.rs
src/tickets/: jwt.rs  mod.rs  ticket.rs
tests/: basic.rs  discovery.rs  pubsub.rs  replay.rs  replay.rs.ignore  streams.rs  streams.rs.ignore
tests/collections/: auth.rs  cell.rs  depq.rs  map.rs  mod.rs  once.rs  register.rs  set.rs  sync.rs  vec.rs
tests/collections/sync/: depq.rs  map.rs  mod.rs  set.rs  vec.rs
tests/discovery/: catalog.rs  depart.rs  dht.rs  mod.rs  purge.rs
tests/groups/: auth.rs  bonds.rs  builder.rs  catchup.rs  execute.rs  feed.rs  leader.rs  mod.rs  p2p.rs  rsm.rs  watch.rs
tests/store/: attached.rs  mod.rs  standalone.rs
tests/streams/: declare.rs  mod.rs  smoke.rs  stats.rs
tests/streams/consumer/: auth.rs  mod.rs  rtt.rs  when.rs
tests/streams/producer/: auth.rs  (+5 more)
tests/tee/: Dockerfile  Dockerfile.gramine  Dockerfile.tee-streams  README.md  docker-compose-streams.yml  docker-compose.yml  group-chat.manifest.template  tee-streams.manifest.template
tests/tickets/: jwt.rs  mod.rs  tdx.rs
tests/utils/: fut.rs  jwt.rs  mod.rs  ticket.rs  time.rs  tracing.rs
(+49 files in other folders)
