[workspace]
members = [".", "src/macros", "examples/orderbook", "examples/tee/tdx"]
default-members = [".", "src/macros"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
version = "0.3.15"
license = "MIT"
homepage = "https://docs.mosaik.world"
documentation = "https://docs.rs/mosaik"
repository = "https://github.com/flashbots/mosaik"
authors = ["Flashbots <info@flashbots.net>", "Karim Agha <karim@flashbots.net>"]
exclude = [".github/", ".local/", ".claude/"]
publish = ["mosaik", "mosaik-macros"]

[workspace.dependencies]
mosaik = { path = "." }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.32"
anyhow = "1.0.102"
rand = "0.9.2"
blake3 = { version = "1.8.4", features = ["serde"] }

[workspace.lints.rust]
type_alias_bounds = "allow"

[workspace.lints.clippy]
tabs_in_doc_comments = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
wildcard_imports = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
unused_async = "warn"
future_not_send = "allow"
needless_doctest_main = "allow"

[package]
name = "mosaik"
description = "A Rust runtime for building self-organizing, leaderless distributed systems."
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
exclude.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "mosaik"
path = "src/main.rs"
required-features = ["cli"]

[lints]
workspace = true

[features]
default = ["cli", "tdx", "prometheus"]
cli = ["clap", "colored"]
prometheus = ["metrics-exporter-prometheus"]

tee = []

tdx = ["tee", "configfs-tsm", "tdx-quote", "zstd"]
tdx-builder-all = ["tdx-builder-alpine", "tdx-builder-ubuntu"]
tdx-builder-alpine = ["tdx-builder"]
tdx-builder-ubuntu = ["tdx-builder"]
tdx-builder = ["tdx"]

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
futures.workspace = true
anyhow.workspace = true
rand.workspace = true
blake3.workspace = true

mosaik-macros = { version = "0.3.6", path = "src/macros" }

thiserror = "2.0.18"
postcard = "1.1.3"
bytes = "1.10.1"
tokio-util = "0.7.18"
tokio-stream = "0.1.18"

chrono = { version = "0.4.44", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
base64 = "0.13"
serde_json = "1.0.149"
digest = "0.10"
n0-error = "0.1.3"
derive_more = { version = "2.1.1", features = ["full"] }
hex = "0.4.3"
im = { version = "15.1.0", features = ["serde"] }
semver = { version = "1.0.28", features = ["serde"] }
dashmap = "6.1.0"
slotmap = "1.1.1"
derive_builder = "0.20.2"
parking_lot = "0.12.5"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
humansize = "2.0.0"
humantime = "2.3.0"
itertools = "0.14.0"
iroh = { version = "0.97.0", features = [
  "address-lookup-pkarr-dht",
  "address-lookup-mdns",
] }
iroh-gossip = "0.97.0"
pkarr = "5.0.2"
b58 = "0.1.2"
serde_bytes = "0.11.19"
metrics = "0.24.3"

# TDX-specific dependencies
tdx-quote = { version = "0.0.5", optional = true }
zstd = { version = "0.13.3", optional = true }
configfs-tsm = { version = "0.0.2", optional = true }

# Prometheus metrics exporter
metrics-exporter-prometheus = { version = "0.18.1", optional = true, features = [
  "http-listener",
] }

# CLI-specific dependencies
colored = { version = "3.1.1", optional = true }
clap = { version = "4.5.61", features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
], optional = true }

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
ctor = { version = "0.6.3" }
rstest = "0.26.1"
clap = { version = "4.5.61", features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
] }
