[package]
name = "beacon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }

mosaik.workspace = true
tokio.workspace = true
serde.workspace = true
clap.workspace = true
