[package]
name = "model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[dependencies]
mosaik.workspace = true
rblib.workspace = true
serde.workspace = true

[lints]
workspace = true
