[package]
name = "rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[lints]
workspace = true


[dependencies]
mosaik.workspace = true
tokio.workspace = true

jsonrpsee = { version = "0.26", features = ["server", "macros"] }
