[package]
name = "rpc"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
mosaik.workspace = true
rblib.workspace = true

tokio.workspace = true
clap.workspace = true

anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1.11"

nanoid = "0.4"
sled = "0.34"

jsonrpsee = { version = "0.26", features = ["server", "macros"] }
