[package]
name = "sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[lints]
workspace = true


[dependencies]
mosaik.workspace = true
tokio.workspace = true
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
rmp-serde.workspace = true
futures.workspace = true
data-encoding.workspace = true
clap.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }


sha3 = "0.10"
