[package]
name = "orderbook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
mosaik.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
futures.workspace = true
anyhow.workspace = true
rand.workspace = true

[lints]
workspace = true
