[package]
name = "tee-streams"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
mosaik = { workspace = true, features = ["sgx"] }
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true
