[package]
name = "mosaik-macros"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
blake3.workspace = true
syn = "2"
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
