[package]
name = "mosaik-macros"
description = "Procedural macros for the Mosaik runtime."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
blake3.workspace = true
syn = "2"
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
